[project]
name = "resume-agent-mcp"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ssghost", email = "ssprof0@gmail.com"},
]
dependencies = [
    "openai",
    "pymupdf4llm",
    "markdown",
    "weasyprint>=67.0",
    "fitz>=0.0.1.dev2",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
